--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,46 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Python
+__pycache__/
+*.py[cod]
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.env
+.venv/
+venv/
+ENV/
+env/
+*.sqlite3
 
-node_modules
-dist
-dist-ssr
-*.local
+# VS Code
+.vscode/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# macOS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Logs
+*.log
+
+# Test/coverage
+htmlcov/
+.coverage
+.cache
+pytest_cache/
+nosetests.xml
+coverage.xml
+*.cover
+*.pyc
+
+# Others
+*.swp
+*.bak
+*.tmp
